@@ -71,6 +71,8 @@ It is particulary useful with CLISP/MIT-CLX.")
 (defparameter *default-font-string* "fixed"
   "Config(): The default font used in clfswm")
 
+(defparameter *color-move-window* "Green"
+  "Config(Main mode group): Color when moving or resizing a windows")
 
 (defparameter *child-selection* nil)
 
